# django_pro

./: .gitignore  manage.py  pyproject.toml
django_pro/: urls.py
django_pro/apps/index/: views.py
django_pro/media/excels/: in_file.xlsx
django_pro/settings/: dev.py  pro.py
django_pro/templates/: Index.html
django_pro/utils/: load_env.py
